# diskf0rm4th

./: .gitignore  CMakeLists.txt  LICENSE  README.md  architecture_blueprint.md
.github/workflows/: build-release.yml
locales/: en.json  tr.json
src/cli/: DiskForm4thCmdlet.cs  diskform4th_cli.csproj  main.cpp  qrcodegen.hpp
src/core/: c_api.cpp  io_buffer.cpp  io_buffer.h
src/ui/: App.xaml  App.xaml.cs  LocalizationManager.cs  MainWindow.xaml  MainWindow.xaml.cs  diskform4th_ui.csproj
